# deadlock-api-data

./: .dockerignore  .gitignore  .mise.toml  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: docker-image-staging.yaml  docker-image.yaml
deadlock_api/: main.py  utils.py
deadlock_api/models/: active_match.py  build.py
deadlock_api/routers/: base.py  v1.py
deadlock_data_api/: __init__.py  conf.py  globs.py  logging_middleware.py  main.py  utils.py
deadlock_data_api/models/: active_match.py  build.py  leaderboard.py  patch_note.py  player_card.py  player_match_history.py  webhook.py
deadlock_data_api/rate_limiter/: limiter.py  models.py
deadlock_data_api/routers/: base.py  live.py  v1.py  v1_commands.py  v1_utils.py  v2.py
protos/: citadel_gcmessages_client_pb2.py  citadel_gcmessages_client_pb2.pyi  citadel_gcmessages_common_pb2.py  citadel_gcmessages_common_pb2.pyi  citadel_usermessages_pb2.py  citadel_usermessages_pb2.pyi  demo_pb2.py  demo_pb2.pyi  gameevents_pb2.py  gameevents_pb2.pyi  gcsdk_gcmessages_pb2.py  gcsdk_gcmessages_pb2.pyi  netmessages_pb2.py  netmessages_pb2.pyi  network_connection_pb2.py  network_connection_pb2.pyi  networkbasetypes_pb2.py  networkbasetypes_pb2.pyi  steammessages_pb2.py  steammessages_pb2.pyi  usermessages_pb2.py  usermessages_pb2.pyi
protos/steammessages_steamlearn/: steamworkssdk_pb2.py  steamworkssdk_pb2.pyi
protos/steammessages_unified_base/: steamworkssdk_pb2.py  steamworkssdk_pb2.pyi
